--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
-    <title>demo1</title>
+    <title>client</title>
     <link rel="stylesheet" type="text/css" href="/dist/index.css" />
   </head>
   <body>
